Add venv and idea to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,44 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+.venv/pyvenv.cfg
+.venv/bin/activate
+.venv/bin/activate.csh
+.venv/bin/activate.fish
+.venv/bin/Activate.ps1
+.venv/bin/debugpy
+.venv/bin/f2py
+.venv/bin/fonttools
+.venv/bin/ipython
+.venv/bin/ipython3
+.venv/bin/jupyter
+.venv/bin/jupyter-kernel
+.venv/bin/jupyter-kernelspec
+.venv/bin/jupyter-migrate
+.venv/bin/jupyter-run
+.venv/bin/jupyter-troubleshoot
+.venv/bin/kaggle
+.venv/bin/normalizer
+.venv/bin/numpy-config
+.venv/bin/pip
+.venv/bin/pip3
+.venv/bin/pip3.12
+.venv/bin/pyftmerge
+.venv/bin/pyftsubset
+.venv/bin/pygmentize
+.venv/bin/python
+.venv/bin/python3
+.venv/bin/python3.12
+.venv/bin/slugify
+.venv/bin/tqdm
+.venv/bin/ttx
+.venv/share/jupyter/kernels/python3/kernel.json
+.venv/share/jupyter/kernels/python3/logo-32x32.png
+.venv/share/jupyter/kernels/python3/logo-64x64.png
+.venv/share/jupyter/kernels/python3/logo-svg.svg
+.venv/share/man/man1/ipython.1
+.venv/share/man/man1/ttx.1
+.gitignore
+.idea/CNN-Brain-Tumor-Detection.iml
+.idea/modules.xml
+.idea/inspectionProfiles/profiles_settings.xml
